# bimaru-solver

./: .gitignore  CMakeLists.txt  README.md
ext/gtest/: CMakeLists.txt
include/: board.h
src/: board.cc
test/: board_unittest.cc
